--- a/style.css
+++ b/style.css
@@ -7,26 +7,23 @@ body {
   display: flex;
   align-items: center;
   background-color: white;
-  padding: 10px 20px;
+  
   border-bottom: 1px solid #e0e0e0;
 }
-.container .logo {
-  padding: 5px;
-}
 .container .logo img {
-  height: 50px;
+  height: 80px;
+  width: 80px;
 }
 .container .nav-links {
   display: flex;
   flex-grow: 1;
   justify-content: center;
-  margin-left: 20px;
+  margin-right: 50px;
+  padding-right: 90px;
 }
 .container .nav-links ul {
   display: flex;
   list-style-type: none;
-  padding: 0;
-  margin: 0;
 }
 .container .nav-links li {
   margin: 0 15px;
@@ -53,6 +50,7 @@ body {
   background-color: #f5f5f5;
   padding: 5px 10px;
   border-radius: 5px;
+  height: 100%;
 }
 .container .nav-icons .search input {
   border: none;
@@ -67,11 +65,14 @@ body {
   display: flex;
   justify-content: center;
   padding-top: 40px;
+  font-family: sans-serif;
 }
 
 .paragraf{
   display: flex;
   justify-content: center;
+  color: gray;
+
 }
 
 .Slider {
@@ -99,7 +100,6 @@ body {
 }
 .konten .sub {
   font-size: 0.9em;
-  font-weight: bold;
   margin-bottom: 10px;
 }
 .konten  .cta {
@@ -144,19 +144,28 @@ box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 
 .paragraf-second{
   display: flex;
+  font-size: 18px;
 }
 
 .paragraf-second h1{
   display: flex;
   justify-content: right;
-  padding: 40px;
+  
   margin-left: 20px;
+}
+
+.paragraf-second h4{
+  display: flex;
+  font-size: 18px;
+  line-height: 1.6;
+  color: #555;
+  padding: 30px;
 }
 
 .paragraf-second p{
   display: flex;
   justify-content: right;
-  padding: 40px;
+ 
   margin-left: 20px;
 }
 
@@ -167,13 +176,11 @@ box-shadow: 0 10px 20px rgba(0, 0, 0, 0.3);
 
 .paragraf-third h1{
   display: flex;
-  padding-right: 150px;
+  justify-content: left;
+  color: gray;
+  font-size: 18px;
 }
 
-.paragraf-third h4{
-  display: flex;
-  padding: 40px;
-}
 
 .paragraf-third button#Jelajah{
   color: rgb(29, 51, 177);
